force-app/main/default/objects/LOP__c/LOP__c.object-meta.xml
<CustomObject>
    <description>Letter of Protection</description>
    <label>LOP</label>
    <nameField>
        <displayFormat>LOP- {0000}</displayFormat>
        <label>LOP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>