force-app/main/default/objects/LOP__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LOPS</relationshipLabel>
    <relationshipName>LOPS</relationshipName>
    <type>Lookup</type>
</CustomField>