force-app/main/default/objects/LOP__c/fields/Creator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Creator_Notes__c</fullName>
    <label>Creator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>