force-app/main/default/objects/LOP__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <description>Look up to Account&apos;s insurance</description>
    <formula>TEXT(Patient_Name__r.Insurance__c)</formula>
    <label>Insurance</label>
    <type>Text</type>
</CustomField>