force-app/main/default/objects/LOP__c/fields/LOP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LOP_End_Date__c</fullName>
    <label>LOP End Date</label>
    <type>Date</type>
</CustomField>