force-app/main/default/objects/LOP__c/fields/LOP_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Name__c</fullName>
    <formula>HYPERLINK(
&apos;/&apos; &amp;    Id,
 Name &amp; &quot; - &quot; &amp;  Patient_Name__r.FirstName &amp; &quot; &quot; &amp;  Patient_Name__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOP Name</label>
    <type>Text</type>
</CustomField>