force-app/main/default/objects/LOP__c/fields/LOP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LOP_Start_Date__c</fullName>
    <label>LOP Start Date</label>
    <type>Date</type>
</CustomField>