force-app/main/default/objects/LOP__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOP</relationshipLabel>
    <relationshipName>LOP</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>