force-app/main/default/objects/LOP__c/fields/Procedure_Injection_Type__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Injection_Type__c</fullName>
    <inlineHelpText>What type of Procedure OR Injection?</inlineHelpText>
    <label>Procedure/Injection Type</label>
    <type>TextArea</type>
</CustomField>