force-app/main/default/objects/LOP__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>CHIRO</fullName>
            </value>
            <value>
                <fullName>Injections</fullName>
            </value>
            <value>
                <fullName>MD Office Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>