force-app/main/default/objects/LOP__c/validationRules/Procedure_Injection_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Procedure_Injection_Type</fullName>
    <active>false</active>
    <description>If Procedure Or Surgery Type is selected then return a value otherwise leave it blank</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Treatment__c, &quot;INJECTION&quot;) || ISPICKVAL(Treatment__c, &quot;SURGERY&quot;),
   ISBLANK( Procedure_Injection_Type__c )
)</errorConditionFormula>
    <errorDisplayField>Procedure_Injection_Type__c</errorDisplayField>
    <errorMessage>Please fill out the Procedure/Injection Type if treatment is Surgery Or Injection otherwise leave blank.</errorMessage>
</ValidationRule>