force-app/main/default/objects/LOP__c/validationRules/Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>LOP_Start_Date__c &gt;=  LOP_End_Date__c</errorConditionFormula>
    <errorDisplayField>LOP_Start_Date__c</errorDisplayField>
    <errorMessage>Start date cannot be on or after the end date.</errorMessage>
</ValidationRule>