force-app/main/default/objects/LOP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Attorney__c</columns>
    <columns>Treatment__c</columns>
    <columns>Procedure_Injection_Type__c</columns>
    <columns>Status__c</columns>
    <columns>LOP_Start_Date__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>