force-app/main/default/objects/LOP__c/listViews/LOP_Due_in_a_Week.listView-meta.xml
<ListView>
    <fullName>LOP_Due_in_a_Week</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Attorney__c</columns>
    <columns>Treatment__c</columns>
    <columns>Procedure_Injection_Type__c</columns>
    <columns>Status__c</columns>
    <columns>LOP_Start_Date__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>LOP_Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <filters>
        <field>LOP_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>LOP Due in a Week</label>
</ListView>