force-app/main/default/objects/LOP__c/listViews/My_assigned_LOP.listView-meta.xml
<ListView>
    <fullName>My_assigned_LOP</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Attorney__c</columns>
    <columns>Treatment__c</columns>
    <columns>Procedure_Injection_Type__c</columns>
    <columns>Status__c</columns>
    <columns>LOP_Start_Date__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>My Assigned LOP</label>
</ListView>